# ChangeLog for app-misc/tkpasman
# Copyright 2000-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-misc/tkpasman/ChangeLog,v 1.13 2007/09/20 17:50:43 armin76 Exp $

*tkpasman-2.2b (20 Sep 2007)

  20 Sep 2007; Raúl Porcel <armin76@gentoo.org> tkpasman-2.2a.ebuild,
  +tkpasman-2.2b.ebuild:
  Version bump wrt #190729, fix RDEPEND

  14 May 2007; Thilo Bangert <bangert@gentoo.org> metadata.xml:
  add <herd>no-herd</herd>

  16 Dec 2006; Charlie Shepherd <masterdriverz@gentoo.org>
  -tkpasman-2.2.ebuild, tkpasman-2.2a.ebuild:
  Fix dependencie, thanks to Patrick Lauer for reporting; bug 151292

  09 Feb 2006; Andrej Kacian <ticho@gentoo.org> tkpasman-2.2.ebuild,
  tkpasman-2.2a.ebuild:
  Removed virtual/x11 dependency, as it's not needed - tk will pull in
  everything necessary.

  05 Jun 2005; Michael Hanselmann <hansmi@gentoo.org> tkpasman-2.2a.ebuild:
  Stable on ppc.

  12 May 2005; Stephanie Lockwood-Childs <wormo@gentoo.org>
  tkpasman-2.2a.ebuild:
  mark ~ppc

  21 Apr 2005; Simon Stelling <blubb@gentoo.org> tkpasman-2.2a.ebuild:
  stable on amd64

  01 Jan 2005; Daniel Ahlberg <aliz@gentoo.org> tkpasman-2.2a.ebuild,
  files/tkpasman-2.2a-gentoo.patch:
  Use wish and tclsh symlinks, closing #73361.

  02 Oct 2003; Joel Hill <hillster@gentoo.org> tkpasman-2.2a.ebuild:
  added homepage

*tkpasman-2.2a (19 Jul 2003)

  19 Jul 2003; Daniel Ahlberg <aliz@gentoo.org> :
  Version bump. Found by Wilbert Berendsen <wilbert@oswf.org> in #22484.

*tkpasman-2.2 (04 May 2003)

  04 May 2003; Daniel Ahlberg <aliz@gentoo.org> :
  Initial import. Ebuild submitted by Wilbert Berendsen <wilbert@oswf.org> 
  in #13710.